[package]
name = "rnm-3d"
version = "0.1.8"
edition = "2021"
authors = ["666rayen999"]
description = "Blazingly Fast + Tiny 3D Format"
license-file = "LICENSE"
repository = "https://github.com/666rayen999/rnm"

[dependencies]
lz4_flex = { version = "0.11.3", default-features = false, features = [
	"frame",
	"std",
], optional = true }
qoi = "0.4.1"
rkyv = { version = "0.8.8", default-features = false, features = ["std"] }

[features]
default = ["safe", "compression"]
compression = ["lz4_flex"]
safe = ["rkyv/default", "lz4_flex/default"]
